# ng

./: .clang-format  .clang-tidy  .codacy.yaml  .coderabbit.yaml  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  CONTRIBUTION.md  LICENSE.md  PLAN.md  README.md  _config.yml  ng_ide_scratch2.ng
.codacy/: codacy.yaml
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  features.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-devcontainer.yml  build.yml  codeql.yml  semgrep.yml
docs/: README.md  code_review_2026_06.md  refactoring_plan_2026_06.md
docs/design/: README.md  auto_derive_traits.md  bytecode_module_loading.md  const_fun.md  constant_generic_parameters.md  enhanced_tuples.md  generalized_delete.md  module_artifact_typechecker.md  module_system.md  native_module_artifacts.md  partial_move_semantics.md  ranges_slicing_pipeline.md  stdlib_modularization.md  symbol_import_aliases.md  tuples.md
docs/guide/: Steps-for-new-syntax.md  language_guide.md  quickstart.md
docs/ref/: CONTRIBUTION.md  Contents.md  Grammar.md  Internals.md  Lexical.md  Memory.md  Overview.md  Semantics.md  cxx-compatibility.md  orgasm_level2_design.md
example/: 01.id.ng  02.many_defs.ng  03.funcall_and_idexpr.ng  04.str.ng  05.valdef.ng  06.array.ng  07.object.ng  08.imports.ng  09.scope.ng  10.loop.ng  11.iterator_example.ng  12.loop_max_stack.ng  13.import_std_prelude.ng  14.tuple.ng  15.generics.ng  16.stdlib_basics.ng  16.tagged_union.ng  16.union_type.ng  17.const_if.ng  18.stdlib_basics.ng  19.union_type.ng  20.switch_otherwise.ng  21.recursive_tagged_union_ref.ng  22.ref_move_swap.ng  23.ref_places.ng  24.move_value_semantics.ng  25.trait_show.ng  26.trait_generic_bound.ng  27.trait_receiver_ref.ng  28.trait_supertraits.ng  29.trait_qualified_call.ng  30.trait_inherent_precedence.ng  31.trait_default_methods.ng  32.trait_default_override.ng  33.trait_default_supertraits.ng  34.trait_object_show.ng  35.trait_object_default.ng  36.trait_object_mutation.ng  37.copy_marker.ng  38.clone_trait.ng  (+28 more)
example/conceptual/: level-2-organized-assembly.asm
example/design-draft/: control-flows.ng
example/orgasm/: 01.id.l2.asm  02.many_defs.l2.asm  03.funcall_and_idexpr.l2.asm  04.str.l2.asm  05.valdef.l2.asm  06.array.l2.asm  07.object.l2.asm  08.imports.l2.asm  09.scope.l2.asm  10.loop.l2.asm  11.iterator_example.l2.asm  12.loop_max_stack.l2.asm  13.import_std_prelude.l2.asm  14.tuple.l2.asm
include/: ast.hpp  common.hpp  config.h  debug.hpp  fwd.hpp  interpreter.hpp  module.hpp  parser.hpp  roptoV1.hpp  runtime.hpp  test.hpp  token.hpp  visitor.hpp
include/ast/: ref_adapter_raw.hpp  ref_adapter_shared_ptr.hpp
include/compiler/: ngcompiler.hpp
include/intp/: Interpreter.hpp  interpreter.hpp  intp.hpp  runtime.hpp  runtime_numerals.hpp
include/orgasm/: compiler.hpp  instruction.hpp  interpreter.hpp  lexer.hpp  module.hpp  native_bridge.hpp  opcode.hpp  parser.hpp  types.hpp  vm.hpp
include/runtime/: array_layout_access.hpp  buffer_runtime.hpp  index_layout_access.hpp  native_marshaling.hpp  string_layout_access.hpp  struct_layout_access.hpp  tagged_layout_access.hpp  tuple_layout_access.hpp  value_access.hpp  value_ops.hpp
include/sysdep/: process.hpp
include/typecheck/: mangling.hpp  overload_resolver.hpp  pattern_matching.hpp  receiver_effect_collector.hpp  trait_registry.hpp  trait_resolution.hpp  type_environment.hpp  type_utils.hpp  typecheck.hpp  typecheck_utils.hpp  typeinfo.hpp
legacy/implementations/ocaml/ng/: debug.ml  dune  lexer.mll  parser.mly  stupid.ml  stupid_v2.ml  typing.ml
legacy/implementations/ocaml/ng/example/: stupid.ng
legacy/implementations/ocaml/ng/example/orgasm/: loop.ng
legacy/implementations/ocaml/ng/hir/: dune  hir.ml  hir_compiler.ml  hir_compiler.mli  hir_print.ml  hir_print.mli
lib/: std.ng
lib/std/: array.ng  imgui.ng  io.ng  list.ng  memory.ng  prelude.ng  seq.ng  string.ng  tuple.ng
misc/fonts/: .gitignore
src/: NonCopyable.cpp  base.cpp  interpreter.cpp  lexer.cpp  main.cpp  parser.cpp  reserved.inc  token.cpp  visitor.cpp
src/ast/: ASTSerializer.cpp  AstVisitor.cpp  DefaultDummyAstVisitor.cpp  DummyVisitor.cpp  IASTVisitor.cpp  ast.cpp  pprint.cpp  serializer.cpp
src/compiler/: ngcompiler.cpp
src/intp/: Interpreter.cpp  interpreter.cpp  runtime.cpp  stupid.cpp
src/module/: IModuleLoader.cpp  ModuleLoader.cpp  ModuleRegistry.cpp
src/orgasm/: Compiler.cpp  VM.cpp  interpreter.cpp  lexer.cpp  module.cpp  parser.cpp
src/parsing/: LexState.cpp  Lexer.cpp  ParseState.cpp  ParserImpl.cpp  reserved.inc
src/runtime/: IBasicObject.cpp  IOverloadableOperators.cpp  NGArray.cpp  NGBoolean.cpp  NGContext.cpp  NGInteger.cpp  NGModule.cpp  NGNumeral.cpp  NGObject.cpp  NGRange.cpp  NGReference.cpp  NGString.cpp  NGStructuralObject.cpp  NGTaggedValue.cpp  NGTuple.cpp  NGUnit.cpp  ObjectBase.cpp  OperatorsBase.cpp  buffer_runtime.cpp  managed_heap.cpp  runtime_env.cpp  storage_layout.cpp
src/stdlib/: imgui.cpp  prelude.cpp
src/sysdep/: process.cpp
src/typecheck/: ArrayType.cpp  FunctionType.cpp  GenericType.cpp  PrimitiveType.cpp  TupleType.cpp  mangling.cpp  overload_resolver.cpp  pattern_matching.cpp  receiver_effect_collector.cpp  trait_resolution.cpp  typecheck.cpp  typecheck_definitions.inl  typecheck_entry.inl  typecheck_expressions.inl  typecheck_helpers.inl  typecheck_statements.inl  typecheck_utils.cpp  typeinfo.cpp
test/: feature_test.cpp  integration_test.cpp  runner.cpp  test.hpp  test_runner.cpp
test/compiler/: ngcompiler_test.cpp  ngcompiler_test.cpp.bak
test/imgui/: main.cpp
test/module/: native_module_artifact_test.cpp
test/orgasm/: compiler_vm_test.cpp  examples_test.cpp  integration_test.cpp  interpreter_test.cpp  lexer_test.cpp  module_test.cpp  native_bridge_test.cpp  nominal_test.cpp  parser_test.cpp
test/parsing/: lexer_keyword_test.cpp  lexer_symbol_identifier_test.cpp  (+14 more)
utils/: coverage_report.sh  leaks_report.sh
(+101 files in other folders)
